@@ -6,14 +6,11 @@ import com.trek.ker.entity.SessionResult;
 import com.trek.ker.entity.Trail;
 import com.trek.ker.entity.User;
 import com.trek.ker.entity.enums.SessionState;
-import com.trek.ker.repository.SessionLikeRepository;
-import com.trek.ker.repository.SessionRepository;
-import com.trek.ker.repository.SessionResultRepository;
-import com.trek.ker.repository.TrailRepository;
-import com.trek.ker.repository.UserRepository;
+import com.trek.ker.repository.*;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.security.SecureRandom;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -37,13 +34,24 @@ public class SessionService {
         this.userRepo = userRepo;
     }
 
+    private static final String ALPHANUM = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
+    private static final SecureRandom rnd = new SecureRandom();
+
     public Session createSession(Long user1Id) {
-        String invite = UUID.randomUUID().toString().substring(0, 6);
+        String invite = randomCode();
         Session s = new Session();
         s.setUser1Id(user1Id);
         s.setInviteCode(invite);
         s.setState(SessionState.CREATED);
         return sessionRepo.save(s);
+    }
+
+    private String randomCode() {
+        StringBuilder sb = new StringBuilder(6);
+        for (int i = 0; i < 6; i++) {
+            sb.append(ALPHANUM.charAt(rnd.nextInt(ALPHANUM.length())));
+        }
+        return sb.toString();
     }
 
     @Transactional
@@ -54,19 +62,37 @@ public class SessionService {
         return sessionRepo.save(s);
     }
 
+    public List<String> getSessionUsernames(Long user1Id) {
+        List<Session> sessions = sessionRepo.findByUser1IdOrderByIdDesc(user1Id);
+        if (sessions.isEmpty()) throw new NoSuchElementException("No session for user " + user1Id);
+        Session s = sessions.get(0);
+        User u1 = userRepo.findById(s.getUser1Id()).orElseThrow();
+        List<String> names = new ArrayList<>();
+        names.add(u1.getUsername());
+        if (s.getUser2Id() != null) {
+            User u2 = userRepo.findById(s.getUser2Id()).orElseThrow();
+            names.add(u2.getUsername());
+        }
+        return names;
+    }
+
     @Transactional
-    public Session setFilters(Long id, Float min, Float max, String diff, String biome) {
-        Session s = sessionRepo.findById(id).orElseThrow();
+    public Session setFilters(Long user1Id, Float min, Float max, String difficulty, String biome) {
+        List<Session> sessions = sessionRepo.findByUser1IdOrderByIdDesc(user1Id);
+        Session s = sessions.isEmpty() ? null : sessions.get(0);
+        if (s == null) throw new NoSuchElementException("No session for user " + user1Id);
         s.setLengthMin(min);
         s.setLengthMax(max);
-        s.setDifficulty(diff);
+        s.setDifficulty(difficulty);
         s.setBiome(biome);
         s.setState(SessionState.FILTERED);
         return sessionRepo.save(s);
     }
 
-    public List<Trail> beginRound(Long id) {
-        Session s = sessionRepo.findById(id).orElseThrow();
+    public List<Trail> beginRound(Long user1Id) {
+        List<Session> sessions = sessionRepo.findByUser1IdOrderByIdDesc(user1Id);
+        Session s = sessions.isEmpty() ? null : sessions.get(0);
+        if (s == null) throw new NoSuchElementException("No session for user " + user1Id);
         List<Trail> list = trailRepo.findByLengthBetweenAndDifficultyAndBiome(
                 s.getLengthMin(), s.getLengthMax(), s.getDifficulty(), s.getBiome());
         Collections.shuffle(list);
@@ -76,8 +102,10 @@ public class SessionService {
     }
 
     @Transactional
-    public SessionLike recordLike(Long sessionId, Long trailId, Long userId, boolean liked, int round) {
-        Session s = sessionRepo.findById(sessionId).orElseThrow();
+    public SessionLike recordLike(Long user1Id, Long trailId, Long userId, boolean liked, int round) {
+        List<Session> sessions = sessionRepo.findByUser1IdOrderByIdDesc(user1Id);
+        Session s = sessions.isEmpty() ? null : sessions.get(0);
+        if (s == null) throw new NoSuchElementException("No session for user " + user1Id);
         User u = userRepo.findById(userId).orElseThrow();
         Trail t = trailRepo.findById(trailId).orElseThrow();
         SessionLike sl = new SessionLike();
@@ -89,19 +117,21 @@ public class SessionService {
         return likeRepo.save(sl);
     }
 
-    public List<Trail> mutualLikes(Long sessionId) {
-        Session s = sessionRepo.findById(sessionId).orElseThrow();
-        List<SessionLike> likes = likeRepo.findBySessionId(sessionId);
+    public List<Trail> mutualLikes(Long user1Id) {
+        List<Session> sessions = sessionRepo.findByUser1IdOrderByIdDesc(user1Id);
+        Session s = sessions.isEmpty() ? null : sessions.get(0);
+        if (s == null) throw new NoSuchElementException("No session for user " + user1Id);
+        List<SessionLike> likes = likeRepo.findBySession_Id(s.getId());
         Set<Long> u1 = likes.stream()
-                .filter(l -> l.getRound() == 1 && l.getUser().getId().equals(s.getUser1Id()) && l.getLiked())
+                .filter(l -> l.getUser().getId().equals(s.getUser1Id()) && l.getRound() == 1 && l.getLiked())
                 .map(l -> l.getTrail().getId())
                 .collect(Collectors.toSet());
         Set<Long> u2 = likes.stream()
-                .filter(l -> l.getRound() == 1 && l.getUser().getId().equals(s.getUser2Id()) && l.getLiked())
+                .filter(l -> l.getUser().getId().equals(s.getUser2Id()) && l.getRound() == 1 && l.getLiked())
                 .map(l -> l.getTrail().getId())
                 .collect(Collectors.toSet());
         u1.retainAll(u2);
-        resultRepo.deleteBySessionId(sessionId);
+        resultRepo.deleteBySession_Id(s.getId());
         List<SessionResult> results = u1.stream().map(tid -> {
             SessionResult sr = new SessionResult();
             sr.setSession(s);
@@ -112,34 +142,35 @@ public class SessionService {
         resultRepo.saveAll(results);
         s.setState(SessionState.RANKING);
         sessionRepo.save(s);
-        return results.stream().map(SessionResult::getTrail).collect(Collectors.toList());
+        return results.stream().map(SessionResult::getTrail).toList();
     }
 
-    public List<SessionResult> rankingRound(Long sessionId, int round) {
-        List<SessionLike> roundLikes = likeRepo.findBySessionIdAndRound(sessionId, round);
-        List<SessionResult> results = resultRepo.findBySessionId(sessionId);
+    public List<SessionResult> rankingRound(Long user1Id, int round) {
+        List<Session> sessions = sessionRepo.findByUser1IdOrderByIdDesc(user1Id);
+        Session s = sessions.isEmpty() ? null : sessions.get(0);
+        if (s == null) throw new NoSuchElementException("No session for user " + user1Id);
+        List<SessionLike> roundLikes = likeRepo.findBySession_IdAndRound(s.getId(), round);
+        List<SessionResult> results = resultRepo.findBySession_Id(s.getId());
         roundLikes.stream()
                 .filter(SessionLike::getLiked)
-                .forEach(l ->
-                        results.stream()
-                                .filter(r -> r.getTrail().getId().equals(l.getTrail().getId()))
-                                .findFirst()
-                                .ifPresent(r -> r.setFinalRank(r.getFinalRank() + 1))
-                );
+                .forEach(l -> results.stream()
+                        .filter(r -> r.getTrail().getId().equals(l.getTrail().getId()))
+                        .findFirst()
+                        .ifPresent(r -> r.setFinalRank(r.getFinalRank() + 1)));
         resultRepo.saveAll(results);
         return results;
     }
 
-    public List<SessionResult> finalizeSession(Long sessionId) {
-        List<SessionResult> results = resultRepo.findBySessionId(sessionId);
+    public List<SessionResult> finalizeSession(Long user1Id) {
+        List<Session> sessions = sessionRepo.findByUser1IdOrderByIdDesc(user1Id);
+        Session s = sessions.isEmpty() ? null : sessions.get(0);
+        if (s == null) throw new NoSuchElementException("No session for user " + user1Id);
+        List<SessionResult> results = resultRepo.findBySession_Id(s.getId());
         results.sort(Comparator.comparingInt(SessionResult::getFinalRank).reversed());
         int keep = Math.max(1, results.size() / 2);
         List<SessionResult> top = new ArrayList<>(results.subList(0, keep));
-        resultRepo.deleteBySessionIdAndTrailIdNotIn(
-                sessionId,
-                top.stream().map(r -> r.getTrail().getId()).collect(Collectors.toList())
-        );
-        Session s = sessionRepo.findById(sessionId).orElseThrow();
+        resultRepo.deleteBySession_IdAndTrailIdNotIn(s.getId(), top.stream()
+                .map(r -> r.getTrail().getId()).toList());
         s.setState(SessionState.COMPLETE);
         sessionRepo.save(s);
         return top;
